frontend/test/should_pass/deleteInOptional.grg
rule r
{
	n:Node;

	optional {
	
		modify {
			delete(n);
		}
	}
	
	modify {
	}
}
