frontend/test/should_fail/delretypesame_002b.grg
rule r{	n:Node;		optional {					modify {			m:Node<n>;		}	}		modify {		delete(n);	}}